Fixed stretched images generated by thumbnail short tag

--- a/rsc/less/bootstrap-basic.less
+++ b/rsc/less/bootstrap-basic.less
@@ -66,11 +66,11 @@ figure {
 }
 .evo_thumbnail__left {
   float: left;
-  margin: 0 2px 2px 0;
+  margin: 0 4px 4px 0;
 }
 .evo_thumbnail__right {
   float: right;
-  margin: 0 0 2px 2px;
+  margin: 0 0 4px 4px;
 }
 
 // Used to limit max width of the replied comments,
